--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,6 +1,10 @@
 <%= form_for(@post) do |f| %>
   <label>Post title:</label><br>
+  <%= author_id_field(@post) %>
+  <br>
+
   <%= f.text_field :title %><br>
+  <%= f.hidden_field :author_id %>
 
   <label>Post Description</label><br>
   <%= f.text_area :description %><br>
